# calvano-replication

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_TOPICS.md  IMPLEMENTATION_REPORT.md  LICENSE-data.md  LICENSE-figures.md  README.md  README_ADDITIONS.md  README_backup.md  docker-compose.yml  environment.yml  pyproject.toml  references.bib  run_all.sh  setup.py  update_badges.sh
.github/: PULL_REQUEST_TEMPLATE.md
binder/: environment.yml  postBuild
configs/: baseline.yaml
hpc/: run_slurm.sh
release_assets/: README.md
scripts/: benchmark.py  make_paper_figures.py  run_longrun_mu005.py  sweep_ca0_sensitivity.py  sweep_mu_precision.py  test_grid_resolution.py
src/: PI_routines.py  QL_routines.py  __init__.py  config_loader.py  convergence.py  convergence_results.py  cooperative_benchmark.py  demand.py  detailed_analysis.py  dtype_policy.py  environment.py  environment_logit.py  epsilon_scheduler.py  equilibrium_check.py  generic_routines.py  globals.py  impulse_response.py  learning_simulation.py  learning_trajectory.py  main.py  params.py  profit.py  q_gap_to_maximum.py  q_learning.py  qlearning.py  visualization.py  worker.py
tests/: ci_small.json  comprehensive_validation.py  example_grid.csv  example_grid.json  mini_grid.json  profit_table.csv  profit_table_analysis.py  test_convergence_threshold.py  test_coop_gap_dtype.py  test_coop_price_exact.py  test_extreme_cases.py  test_make_figures.py  test_make_tables.py  test_paper_parity.py  test_phase1.py  test_phase2.py  (+8 more)
(+35 files in other folders)
